<resources>
    <string name="app_name">My Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_toSign_in">Click here to Sign in</string>
    <string name="action_register">Register Account</string>
    <string name="action_toRegister">Register Here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_settings">Settings</string>
    <string name="finish_Order">Finish Order</string>
    <string name="change_username">Change Username</string>
    <string name="enter_username">New Username:</string>
    <string name="new_password">New Password:</string>
    <string name="change_password">Change Password</string>
    <string name="AccountInformationButtonDisplay">Account Information</string>
    <string name="censoredPassword">Click here to display</string>
    <string name="yourinformation"> <font fg="#00000000"><u>Your Information</u></font></string>
    <string-array name="users">
        <item>Owner</item>
        <item>Customer</item>
    </string-array>
    <!-- Labels of activities -->
    <string name="title_activity_store_manager">Store Manager</string>
    <string name="title_activity_owner_home">Store Owner Menu</string>
    <string name="title_activity_edit_store_info">Edit Store Information</string>
    <string name="title_activity_edit_item_info">Edit Item Information</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_customer_make_order">Create an order</string>
    <string name="title_activity_customer_orders">Customer Orders</string>
    <string name ="title_activity_view_cart">Cart</string>

    <!-- Strings used for customer viewing orders -->
    <string name="order_view_screen_name">Your Orders</string>
    <string name="order_view_more_info">Tap to View Order Details</string>
</resources>